# DarkoGame

./: .gitignore  CMakeLists.txt  GNUmakefile  compile_commands.json  install.sh  readme.md
Source/: DGKGame.h  DGKGame.m  DarkoGameKit.h
Source/content/: DGKResourceManager.h  DGKResourceManager.m
Source/graphics/: DGKShader.h  DGKShader.m  DGKSpriteRenderer.h  DGKSpriteRenderer.m  DGKTexture2D.h  DGKTexture2D.m
